first buildable prototype