@@ -2,7 +2,7 @@
 //Because we use ANt replaceregexp '\' char needs to be represented with 8 times '\'
 ext {
 	cmrJavaCommandLinux = './jre/bin/java'
-	cmrJavaCommandWin = 'jre\\\\\\\\bin\\\\\\\\java.exe'
+	cmrJavaCommandWin = 'jre\\\\bin\\\\java.exe'
 	cmrJavaMemory32bit = '-Xms1024m -Xmx1024m -Xmn384M -XX:MaxPermSize=128m -XX:PermSize=128m'
 	cmrJavaMemory64bit = '-Xms1536m -Xmx1536m -Xmn512M -XX:MaxPermSize=192m -XX:PermSize=128m'
 	cmrJavaOpts32bit = '-XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=80 -XX:+UseCMSInitiatingOccupancyOnly -XX:+UseParNewGC -XX:+CMSParallelRemarkEnabled -XX:+DisableExplicitGC -XX:SurvivorRatio=4 -XX:TargetSurvivorRatio=90 -XX:BiasedLockingStartupDelay=500 -XX:+UseFastAccessorMethods -XX:+UseBiasedLocking -XX:+HeapDumpOnOutOfMemoryError'
@@ -10,8 +10,9 @@ ext {
 	cmrJavaOptsLinux = '-server'
 	cmrJavaOptsWin = ''
 	cmrJavaLocgcLinux = '-verbose:gc -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -XX:+PrintTenuringDistribution -Xloggc:logs/gc.log'
-	cmrJavaLocgcWin = '-verbose:gc -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -XX:+PrintTenuringDistribution -Xloggc:logs\\\\\\\\gc.log'
+	cmrJavaLocgcWin = '-verbose:gc -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -XX:+PrintTenuringDistribution -Xloggc:logs\\\\gc.log'
 	
-	jvmRoot= "${mainExtResources}/jvm"
-	jvmList = ['jre7-linux-x64', 'jre7-linux-x86', 'jre7-windows-x86', 'jre7-windows-x64']
+	cmrJavaOptsForTests = ['-XX:+UseConcMarkSweepGC', '-XX:CMSInitiatingOccupancyFraction=80', '-XX:+UseCMSInitiatingOccupancyOnly', '-XX:+UseParNewGC', '-XX:+CMSParallelRemarkEnabled', '-XX:+DisableExplicitGC', '-XX:SurvivorRatio=4', '-XX:TargetSurvivorRatio=90', '-XX:BiasedLockingStartupDelay=500', '-XX:+UseFastAccessorMethods', '-XX:+UseBiasedLocking', '-XX:+HeapDumpOnOutOfMemoryError']
+	
+	jvmListPackage = ['jre7-linux-x64', 'jre7-linux-x86', 'jre7-windows-x86', 'jre7-windows-x64']
 }
